--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,10 @@ services:
     ports:
       - 8000:8000
 
+    environment:
+      - PYTHONDONTWRITEBYTECODE=1
+      - PYTHONUNBUFFERED=1
+
     entrypoint: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
 
 
