--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,21 +2,21 @@ version: '3.8'
 
 
 services:
-  app:
+  chatapp:
     build: ./
     container_name: chatapp
     restart: always
     ports:
-      - 8000:8000
+      - 9008:9008
 
     environment:
       - PYTHONDONTWRITEBYTECODE=1
       - PYTHONUNBUFFERED=1
 
-    entrypoint: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+    entrypoint: ["python", "manage.py", "runserver", "0.0.0.0:9008"]
 
 
-  redis:
+  chatredis:
     image: redis:alpine
     container_name: chatredis
     restart: always
